tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/control.stderr
TOML parse error at line 9, column 22
  |
9 | string-null = "null\x00"
  |                      ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
